[package]
name = "punch"
version = "0.1.0"
authors = ["Philipp Stucki <ps@stuckistucki.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version ="0.24.0", features = ["chrono"] }
clap="2.33.3"
serde_json = "1.0.57"
chrono ="0.4.15"
itertools="0.9.0"
colored="2.0.0"
